--- a/templates/cursos/cursos_admin.html
+++ b/templates/cursos/cursos_admin.html
@@ -45,7 +45,9 @@
                         <th class="w3-red"> Semestre y año</th>
                         <th class="w3-red"> Nombre</th>
                         <th class="w3-red"></th>
-                        <th class="w3-red"></th>
+                        {% if user|is_admin %}
+                            <th class="w3-red"></th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <script>
@@ -60,23 +62,27 @@
                             <td class="w3-light-gray"> {{ curso.get_name }} </td>
                             <!-- Boton de detalles -->
                             <td class="w3-light-gray">
-                                <form action="{% url 'cursos:curso_detalle' pk=curso.get_pk%}" method="post">
+                                <form action="{% url 'cursos:curso_detalle' pk=curso.get_pk %}" method="post">
                                     {% csrf_token %}
                                     <input type="hidden" name="id" value="{{ curso.pk }}">
-                                    <button class="w3-button w3-small w3-round w3-red w3-center" type="submit">Ver detalles
+                                    <button class="w3-button w3-red w3-small w3-round w3-center" type="submit">
+                                        <i class="fas fa-search"></i>
+                                        Ver
                                     </button>
                                 </form>
                             </td>
                             <!-- Boton eliminar -->
-                            <td class="w3-light-gray w3-right-align">
-                            <form action="{% url 'cursos:delete_curso' %}" method="post">
-                                {% csrf_token %}
-                                <input type="hidden" name="id" value="{{ curso.pk }}">
-                                <button class="w3-button w3-round w3-red w3-small" type="submit">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </form>
-                        </td>
+                            {% if user|is_admin %}
+                                <td class="w3-light-gray w3-right-align">
+                                    <form action="{% url 'cursos:delete_curso' %}" method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="id" value="{{ curso.pk }}">
+                                        <button class="w3-button w3-round w3-red w3-small" type="submit">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    </form>
+                                </td>
+                            {% endif %}
 
                             <!-- Javascript scan for cursos with format {(codigo,seccion,nombre,semestre,año), ....}-->
                             <script>
