--- a/templates/evaluacion/evaluacion_admin.html
+++ b/templates/evaluacion/evaluacion_admin.html
@@ -30,7 +30,9 @@
 
                     <th class="w3-red"> Duración esperada</th>
 
-                    <th class="w3-red"></th>
+                    {% if user|is_admin %}
+                        <th class="w3-red"></th>
+                    {% endif %}
                 </tr>
                 </thead>
                 <script>
@@ -40,21 +42,25 @@
                 <tbody id='evaluaciones'>
                 {% for evaluacion in evaluacion_list %}
                     <tr>
-                        <td class="w3-light-gray"><a href="{% url 'evaluaciones:evaluacion_detalle' evaluacion.pk %}">{{ evaluacion }}</a></td>
+                        <td class="w3-light-gray"><a
+                                href="{% url 'evaluaciones:evaluacion_detalle' evaluacion.pk %}">{{ evaluacion }}</a>
+                        </td>
                         <td class="w3-light-gray">{{ evaluacion.get_course }}</td>
                         <td class="w3-light-gray"> {{ evaluacion.get_state }} </td>
                         <td class="w3-light-gray"> {{ evaluacion.get_startdate }} </td>
                         <td class="w3-light-gray"> {{ evaluacion.get_enddate }} </td>
                         <td class="w3-light-gray"> {{ evaluacion.get_rank }} </td>
-                        <td class="w3-light-gray w3-right-align">
-                            <form action="{% url 'evaluaciones:delete_evaluacion' %}" method="post">
-                                {% csrf_token %}
-                                <input type="hidden" name="id" value="{{ evaluacion.pk }}">
-                                <button class="w3-button w3-round w3-red w3-small" type="submit">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </form>
-                        </td>
+                        {% if user|is_admin %}
+                            <td class="w3-light-gray w3-right-align">
+                                <form action="{% url 'evaluaciones:delete_evaluacion' %}" method="post">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="id" value="{{ evaluacion.pk }}">
+                                    <button class="w3-button w3-round w3-red w3-small" type="submit">
+                                        <i class="fas fa-trash"></i>
+                                    </button>
+                                </form>
+                            </td>
+                        {% endif %}
 
                         <!-- Javascript scan for evaluaciones with format {(nombre, curso, rango, fecha_inicio, fecha_fin, estado), ....}-->
                         <script>
