--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load evaluador_privileges %}
 {% block content %}
     <!-- Portada -->
     <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
@@ -25,8 +26,9 @@
                 <th class="w3-red"> Fecha fin</th>
 
                 <th class="w3-red"> Duración esperada</th>
-
+                {% if user|is_admin %}
                 <th class="w3-red"></th>
+                {% endif %}
             </tr>
             <tr>
                 <td class="w3-light-gray"> {{ evaluacion }}</td>
@@ -35,6 +37,7 @@
                 <td class="w3-light-gray"> {{ evaluacion.get_startdate }} </td>
                 <td class="w3-light-gray"> {{ evaluacion.get_enddate }} </td>
                 <td class="w3-light-gray"> {{ evaluacion.get_rank }} </td>
+                {% if user|is_admin %}
                 <td class="w3-light-gray w3-right-align">
                     <form action="{% url 'evaluaciones:delete_evaluacion' %}" method="post">
                         {% csrf_token %}
@@ -44,6 +47,7 @@
                         </button>
                     </form>
                 </td>
+                {% endif %}
             </tr>
         </table>
     </div>
@@ -59,6 +63,7 @@
                 {% for eval in evaluadores %}
                     <li>
                         {{ eval }}
+                        {% if user|is_admin %}
                         <form action="{% url 'evaluaciones:unbound_evaluador' evaluacion.pk %}" method="post">
                             {% csrf_token %}
                             <input type="hidden" name="id_evaluacion" value="{{ evaluacion.pk }}">
@@ -67,8 +72,10 @@
                                 <i class="fas fa-user-minus"></i>
                             </button>
                         </form>
+                        {% endif %}
                     </li>
                 {% endfor %}
+                {% if user|is_admin %}
                 <form action="{% url 'evaluaciones:bound_evaluador' evaluacion.pk %}" method="post">
                     {% csrf_token %}
                     <li class="w3-hide">{{ evaluador_form.evaluacion }}</li>
@@ -76,6 +83,7 @@
                         <button class="w3-button w3-red w3-round w3-small" type="submit">+</button>
                     </li>
                 </form>
+                {% endif %}
             </ul>
         </div>
     </div>
